--- a/.github/workflows/deploy-back.yaml
+++ b/.github/workflows/deploy-back.yaml
@@ -1,4 +1,4 @@
-name: Deploy NestJS Application
+name: Deploy Back-End
 
 on:
   push:
@@ -43,6 +43,16 @@ jobs:
         source: "production.tar.gz"
         target: "/home/${{ secrets.SERVER_USER }}/appli-gestion-sport/back-end/"
 
+    - name: Copy Ecosystem Config to the Server
+      uses: appleboy/scp-action@master
+      with:
+        host: ${{ secrets.SERVER_IP }}
+        username: ${{ secrets.SERVER_USER }}
+        key: ${{ secrets.SSH_PRIVATE_KEY }}
+        port: 22
+        source: "ecosystem.config.js"
+        target: "/home/${{ secrets.SERVER_USER }}/appli-gestion-sport/"
+
     - name: Deploy with PM2
       uses: appleboy/ssh-action@master
       with:
@@ -55,4 +65,4 @@ jobs:
           tar -xzf production.tar.gz
           rm production.tar.gz
           export GOOGLE_APPLICATION_CREDENTIALS=/home/${{ secrets.SERVER_USER }}/appli-gestion-sport/back-end/mma-baisieux-f9fcae8661ce.json
-          pm2 reload ecosystem.config.js --update-env
+          pm2 reload /home/${{ secrets.SERVER_USER }}/appli-gestion-sport/ecosystem.config.js --update-env
